SERVER-77278 Secondaries close empty database on receipt of a conflicting createCollection database name to handle primary dropDatabase oplog rollback

(cherry picked from commit 7d6513611f97a60746af4c9ebd7e1cec2d4b844a)